--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     container_name: web_worker
     volumes:
       - ./storage/xdebug:/tmp/
+      - ./storage/web:/var/www/html
     ports:
       - 8080:80
     networks:
